# Laboratory

./: .gitignore  .gitmodules  .submodule  BaseDexClassLoader.java  CHANGELOG.md  DexPathList.java  README.md  add-submodule.sh  bintray-with-maven-publish.gradle.kts  bintray.gradle.kts  bintray_publish.gradle.kts  build.gradle  build.gradle.kts  build.gradle.txt  demo.md  feature.txt  gradle.properties  key.jks  maven-publish.gradle.kts  record.md  settings.gradle  settings.gradle.kts  submodule.sh  traces.txt  uploadCenter.gradle.kts
CaldremchX/: build.gradle
Clone/: build.gradle
EntryLib/: build.gradle.kts
Laboratory/: HELP.md  README.md  add-submodule.sh  assemble.sh  build.gradle  build.gradle.kts  gradle.properties  publish.sh  record.md  settings.gradle.kts  submodule.sh
Laboratory/NLCore/CoreClient/: CMakeLists.txt  main.c  nl_poll_client.c  nl_poll_client.h  nl_select_client.c  nl_select_client.h
Laboratory/NLCore/CoreServer/: CMakeLists.txt  main.c  nl_poll_server.c  nl_poll_server.h  nl_select_server.c  nl_select_server.h
Laboratory/native-laboratory/: CMakeLists.txt  build.gradle.kts
Laboratory/native-laboratory/Core/: nl_server.c  nl_server.h
Laboratory/native-laboratory/Core-Client/: main.c  nl_client.c
Laboratory/native-laboratory/src/main/cpp/: native-lib.c
Laboratory/native-laboratory/src/main/java/com/caldremch/nativelaboratory/c/: NativeLaboratory.kt  RenderActionEngine.kt  RenderObject.kt
Laboratory/nl-client/native/: CMakeLists.txt  build.gradle.kts
Laboratory/nl-client/native/src/main/: AndroidManifest.xml
Laboratory/nl-client/native/src/main/cpp/: native-lib.c
Laboratory/nl-client/native/src/main/java/com/caldremch/nativelaboratory/c/: NativeLaboratory.kt
Laboratory/nl-client/native/src/test/java/com/caldremch/nativelaboratory/c/: ExampleUnitTest.kt
Laboratory/nl-server/native/: CMakeLists.txt  build.gradle.kts
Laboratory/nl-server/native/src/androidTest/java/com/caldremch/nativelaboratory/c/: ExampleInstrumentedTest.kt
Laboratory/nl-server/native/src/main/cpp/: native-lib.c
Laboratory/nl-server/native/src/main/java/com/caldremch/nativelaboratory/c/: NativeLaboratory.kt
PickerView/: build.gradle  build.gradle.kts
RecyclerView/: build.gradle
app/: build.gradle  build.gradle.kts
app-host/: build.gradle
app-plugin-a/: build.gradle
backup-gradle/: bintray.gradle.kts  install.gradle.kts  install_github.gradle.kts
buildSrc/: build.gradle  build.gradle.kts
caldremchx/: build.gradle
common/: build.gradle  build.gradle.kts
data-core/: build.gradle  build.gradle.kts
date-picker-panel/: build.gradle
demo/: build.gradle
dialog/: build.gradle
entry/: build.gradle  build.gradle.kts  build.gradle.kts.backup
entry-annotation/: build.gradle.kts
entry-compiler/: build.gradle.kts
image-core/: build.gradle  build.gradle.kts
laboratory-annotation/: build.gradle  build.gradle.kts
laboratory-compiler/: build.gradle  build.gradle.kts
lib/: build.gradle
looker/: build.gradle
matrix/: .gitignore
matrix-plugin/: build.gradle
maven-publish-android-java/: build.gradle
maven-publish-example/: build.gradle.kts  maven-publish.gradle.kts
mylibrary/: build.gradle
native-logger/: build.gradle
picker-view/: build.gradle  build.gradle.kts
plugin-shadow-apk/: build.gradle
scripts/: add_all_submodule_deps.sh  remove_all_submodues.sh
seven-seconds/: build.gradle
(+837 files in other folders)
